tests/inputs/invalid/types/bad_arrays/bad_array.crbc
routine main () : integer is 
    var ar : array [2] boolean;

    for i in 1 .. 2 loop
        ar[i] := i;
    end

    return 0;
end
